--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "rimraf dist && tsc --build tsconfig.json",
     "start": "node ./src/bin/www",
     "dev": "nodemon ./src/bin/www",
-    "dev:ts": "ts-node-dev --respawn --transpile-only --clear --ignore-watch node_modules ./src/bin/www"
+    "dev:ts": "ts-node-dev --respawn --transpile-only --clear --ignore-watch node_modules ./src/bin/www",
+    "debug": "ts-node-dev ./src/bin/www"
   },
   "dependencies": {
     "@types/crypto-js": "^4.0.2",
